tests/fixtures/invalid/int_rshift_float.py
# Test int right shift with float (should fail)
x: int = 5
y: float = 2.0
result: int = x >> y
